# UM2N

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.txt  Makefile  README.md  combine_vis.py  combine_vis_plot.py  inference_utils.py  install.sh  install_gpu.sh  pyproject.toml  requirements.txt  run_train.py  run_train_baselines.py  run_train_fine_tune.py  setup.py  temp.msh  test_cylinder_slip_top_bottom_uniform.py  test_finite_difference.py  test_flow_past_airfoil_final.py  test_flow_past_cylinder.py  test_flow_past_cylinder_demo.py  test_flow_past_cylinder_demo_ale.py  test_flow_past_cylinder_demo_ale_one.py  test_flow_past_cylinder_demo_ale_one_slip.py  test_flow_past_cylinder_final.py  test_flow_past_cylinder_high_rey.py  test_flow_past_cylinder_one_high_rey.py  test_flow_past_cylinder_slip_top_bottom.py  test_flow_past_cylinder_uniform.py  test_flow_past_plate_demo.py  test_helm_demo.py  test_phi_grad.py  test_ring_demo_perf.py  test_sampling.py  view_dataset_diff.py  vis_run.py
UM2N/: __init__.py
configs/: M2N_area_loss_bi_edge.yaml  M2N_area_loss_bi_edge_hessian_norm.yaml  M2N_bi_edge.yaml  M2N_bi_edge_hessian_norm.yaml  M2N_en_largeset_small_scale_type_2.yaml  M2N_en_largeset_small_scale_type_6.yaml  M2N_en_largeset_small_scale_type_6_area_chamfer.yaml  M2N_en_largeset_small_scale_type_6_area_chamfer_bd_mask_only.yaml  M2N_en_largeset_small_scale_type_6_area_chamfer_large.yaml  M2N_en_largeset_small_scale_type_6_area_only.yaml  M2N_en_largeset_small_scale_type_6_chamfer_only.yaml  M2N_enhance_largeset.yaml  M2N_enhance_largeset_monitor.yaml  M2N_enhance_largeset_monitor_only.yaml  M2N_enhance_miniset.yaml  M2N_enhance_miniset_new.yaml  M2N_largeset.yaml  M2N_largeset_small_scale_type_0.yaml  M2N_largeset_small_scale_type_2.yaml  M2N_largeset_small_scale_type_6.yaml  M2N_miniset_new.yaml  M2T_area_loss_bi_edge.yaml  M2T_largeset.yaml  M2T_largeset_monitor_only.yaml  M2T_largeset_no_monitor.yaml  M2T_largeset_with_grad.yaml  M2T_miniset_new.yaml  M2T_monitor_largeset_small_scale_type_6_coord.yaml  MRN_GTE_area_loss_bi_edge.yaml  MRN_LTE_area_loss_bi_edge.yaml  MRN_area_loss_bi_edge.yaml  MRN_area_loss_bi_edge_hessian_norm.yaml  MRN_bi_edge.yaml  MRT_area_loss_bi_edge.yaml  MRT_area_loss_bi_edge_1layerRecurrent.yaml  MRT_area_loss_bi_edge_1layerRecurrent_attention_mask=0.5.yaml  MRT_area_loss_bi_edge_1layerRecurrent_attention_mask=0.5_poly.yaml  MRT_area_loss_bi_edge_1layerRecurrent_grad_test_semi_supervised_phi_grad.yaml  MRT_area_loss_bi_edge_1layerRecurrent_grad_test_semi_supervised_phi_grad_old_dataset.yaml  MRT_area_loss_bi_edge_1layerRecurrent_grad_test_supervised_phi.yaml  (+106 more)
data/: build_helmholtz_dataset.py
docs/: conf.py
failing-geometries/: double_basin.geo  headland.geo  simple.py  square.geo
install/: install.sh
meshes/: Makefile  airfoil.geo  airfoil.msh  cylinder_010.msh  cylinder_015.msh  cylinder_one.geo  cylinder_one.msh  gen_mesh.py  plate_015.geo  plate_015.msh
play/: play_conv_feat.py  play_eval.py  play_model.py  play_predict.py
pretrain_model/: config.yaml
script/: build_burgers.py  build_burgers_square.py  build_dataset.py  build_helmholtz_dataset.py  build_helmholtz_poly.py  build_helmholtz_square.py  build_poisson_poly.py  build_poisson_square.py  build_polymesh.py  build_swirl.py  build_swirl_square.py  compare.py  evaluate.py  evaluate_burgers.py  evaluate_model.py  evaluate_swirl.py  gradual_change.py  make_dataset.sh  make_dataset_helm_test.sh  make_dataset_helm_train.sh  make_dataset_swirl.sh  make_helmholtz_poly.sh  make_helmholtz_square.sh  make_polymesh.sh  plot.py  (+11 more)
(+129 files in other folders)
