[build-system]
requires = ["setuptools"]

[project]
name = "warpmesh"
version = "1.0"
dependencies = [
  "einops",
  "flake8",
  "gmsh",
  "jupyter",
  "ipython",
  "matplotlib",
  "meshio",
  "mpltools",
  "numpy",
  "pandas",
  "pep8",
  "pytest",
  "pytest-timeout",
  "rich",
  "ruff",
  "seaborn",
  "sphinx",
  "tensorboardX",
  "torch",
  "torch_geometric",
  "torch_scatter",
  "torch_sparse",
]
authors = [
  {name = "Chunyang Wang"},
  {name = "Mingrui Zhang"},
  {name = "Stephan C. Kramer"},
  {name = "Joseph G. Wallwork"},
]
maintainers = []  # TODO: Who will be the maintainers?
description="PDE mesh r-adaptation tool"
readme = "README.md"
# TODO: license = {file = "LICENSE"}
keywords = ["python", "meshing", "machine-learning", "firedrake"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]

[project.urls]
Homepage = "https://erizmr.github.io/UM2N"
# TODO: Documentation
Repository = "https://github.com/erizmr/UM2N"

[tools.setuptools]
packages = ["warpmesh"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # Isort
]
